# aquapod

./: .env.template  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
aquapod/: cookies.txt  main.py
tests/: test_functions.py
